; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c__tl_store_init.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c__tl_store_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }
%struct.TYPE_2__ = type { i32 }

@TL_OUT_PID = common dso_local global i32* null, align 8
@tl_type_conn = common dso_local global i32 0, align 4
@tl_out_conn_methods = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connection*, i64, i32)* @_tl_store_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_tl_store_init(%struct.connection* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.connection*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.connection*, %struct.connection** %4, align 8
  %8 = icmp ne %struct.connection* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %3
  %10 = load %struct.connection*, %struct.connection** %4, align 8
  %11 = call %struct.TYPE_2__* @RPCS_DATA(%struct.connection* %10)
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32* %12, i32** @TL_OUT_PID, align 8
  br label %14

13:                                               ; preds = %3
  store i32* null, i32** @TL_OUT_PID, align 8
  br label %14

14:                                               ; preds = %13, %9
  %15 = load %struct.connection*, %struct.connection** %4, align 8
  %16 = load i32, i32* @tl_type_conn, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @__tl_store_init(%struct.connection* %15, i32 0, i32 %16, i32* @tl_out_conn_methods, i32 134217728, i32 %17, i64 %18)
  ret i32 %19
}

declare dso_local %struct.TYPE_2__* @RPCS_DATA(%struct.connection*) #1

declare dso_local i32 @__tl_store_init(%struct.connection*, i32, i32, i32*, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
